--- a/app/pug/about-us.pug
+++ b/app/pug/about-us.pug
@@ -15,9 +15,15 @@ html(lang='en')
 
     section.page
       h1.page__title.tk-pauline About Us
-      .page__wrapper.construction
-        h2 This page is under construction
-        p Please check back soon.
+      .page__wrapper
+        
+        h2 About Corwin Beverage
+        p 
+          | Corwin Beverage Company is a fourth generation family-owned business that has sold beverages in Southwest Washington since 1941. Founders Laura and Kyle Kendall, along with their daughter, Barbara, and her husband, Harold Corwin, moved to Vancouver, Washington in the late 1930’s to acquire the Vancouver Pepsi franchise after selling their beer and Coca-Cola business in Bend, Oregon. 
+        p
+          | From our humble beginnings with one truck and three employees nearly 70 years ago, to over 100 trucks and more than 100 employees today, Corwin has established a long tradition of award-winning sales and service. We’re active in supporting the communities we serve, and are proud of our terrific Corwin family, products and partnerships.
+        p
+          | Take a look around and get to know us. We look forward to getting to know you.
     
     include ../includes/site-footer.pug
       
