--- a/app/pug/contact.pug
+++ b/app/pug/contact.pug
@@ -90,7 +90,7 @@ html(lang='en')
               span.team__title Inventory Manager
               a.team__email(href='mailto:shaun_nelson@corwinbevco.com') E-mail Shaun
           figure
-            img(alt="Tim Osborn's photo", src='images/photo-placeholder.jpg')
+            img(alt="Tim Osborn's photo", src='images/osborn.jpg')
             figcaption
               | Tim Osborn 
               span.team__title Service Manager
